# cadastro

./: .gitignore  CMakeLists.txt
include/: person.h
src/: main.c
